# cardputer-wallet

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REPO_AGENTS.md  ROADMAP.md  SPECIFICATION.md
.github/workflows/: ci.yml  codex-cleanup.yml  rust-ci.yml
docs/: ARCHITECTURE_REFACTORING.md  DEVELOPER_UI.md  DUPLICATION_AUDIT.md  SETUP.md
docs/specs/: v0.1.md
firmware/: Cargo.toml  README.md  build.rs
firmware/src/: lib.rs  system.rs  time.rs  totp.rs
firmware/src/crypto/: mod.rs
firmware/src/hid/: ble.rs  core.rs  mod.rs  usb.rs
firmware/src/storage/: mod.rs
firmware/src/sync/: context.rs  crypto.rs  crypto_tests.rs  mod.rs  protocol.rs  protocol_tests.rs  storage.rs  storage_tests.rs  sync_protocol_tests.rs  sync_storage_tests.rs  test_helpers.rs  tests_pull.rs  tests_push.rs  tests_time.rs  tests_transport.rs
firmware/src/transport/: mod.rs  usb.rs
firmware/src/ui/: data.rs  input.rs  journal.rs  mod.rs  render.rs  state.rs  transport.rs
firmware/src/ui/state/: entry.rs  fixtures.rs  lock.rs  mod.rs  sync.rs  widgets.rs
firmware/src/ui/state/entry/: controller.rs  mod.rs  model.rs  view.rs
firmware/tests/: hid_ble.rs  ui_entry.rs  ui_integration.rs
host-cli/: Cargo.toml  README.md
host-cli/src/: application.rs  artifacts.rs  constants.rs  main.rs  tests.rs  tests_confirm.rs  tests_hello.rs  tests_pull.rs  tests_push.rs  tests_status.rs  tests_transport.rs  transport.rs
host-cli/src/artifacts/: memory.rs
host-cli/src/commands/: host_config.rs  mod.rs  signature.rs
host-cli/src/commands/confirm/: mod.rs
host-cli/src/commands/get_time/: mod.rs
host-cli/src/commands/hello/: mod.rs
host-cli/src/commands/pull/: mod.rs
host-cli/src/commands/pull_head/: mod.rs
host-cli/src/commands/push/: artifacts.rs  frames.rs  mod.rs  plan.rs
host-cli/src/commands/set_time/: mod.rs
host-cli/src/commands/status/: mod.rs
host-cli/src/test_support/: mod.rs
host-cli/src/tests_pull/: fixtures.rs  mod.rs  persistence.rs  recovery.rs
host-cli/src/transport/: adapters.rs  helpers.rs  memory.rs
scripts/: dev-check.sh
shared/: Cargo.toml  build.rs  schema.ergot
shared/src/: cdc.rs  checksum.rs  error.rs  lib.rs  schema.rs  totp.rs  vault.rs
shared/src/cdc/: mod.rs  transport.rs
shared/src/journal/: mod.rs
shared/src/transfer/: artifact_stream.rs  checks.rs  io.rs  mod.rs
shared/src/vault/: errors.rs  flash.rs  journal.rs  mod.rs  model.rs  nonce.rs  storage.rs
vault-core/: Cargo.toml
vault-core/src/: cipher.rs  lib.rs  storage.rs
vault-core/tests/: format.rs
