[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
shared = { path = "../shared", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["alloc"] }
sequential-storage = { version = "5.0.1", default-features = false, features = ["alloc", "_test"] }
embedded-storage-async = { version = "0.4", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
scrypt = { version = "0.12.0-rc.2", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11", default-features = false, features = ["alloc"] }
embassy-sync = { version = "0.7.2", default-features = false }

[dev-dependencies]
rand_chacha = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(target_arch = "xtensa")'.dependencies]
embassy-executor = { version = "0.2", default-features = false }
esp-hal = { version = "1.0.0-rc.1", default-features = false, features = ["esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.9", default-features = false, features = ["esp32s3"] }
esp-alloc = "0.4"
embassy-time = { version = "0.4", default-features = false }
nb = "1.1"
static_cell = "2.1"
trouble-host = { version = "0.5", default-features = false, features = ["peripheral", "gatt", "derive"] }
