[package]
name = "firmware"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.88"

[features]
default = []
firmware-bin = []
ui-tests = []

[dependencies]
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
shared = { path = "../shared", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["alloc", "zeroize_derive"] }
sequential-storage = { version = "5.0.1", default-features = false, features = ["alloc"] }
embedded-storage-async = { version = "0.4", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
scrypt = { version = "0.12.0-rc.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
embassy-sync = { version = "0.7.2", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["alloc", "static_secrets", "zeroize"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.1"

[dev-dependencies]
rand_chacha = { version = "0.3", default-features = false, features = ["std"] }
critical-section = { version = "1.2", default-features = false, features = ["std"] }
shared = { path = "../shared", default-features = false, features = ["std"] }
trouble-host = { version = "0.5.0", default-features = false, features = ["peripheral", "gatt", "derive", "default-packet-pool"] }
sequential-storage = { version = "5.0.1", default-features = false, features = ["alloc", "_test"] }

[target.'cfg(not(target_arch = "xtensa"))'.dependencies]
embassy-time = { version = "0.5.0", default-features = false, features = ["std"] }

[[bin]]
name = "cardputer-firmware"
path = "./src/bin/main.rs"
required-features = ["firmware-bin"]

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-hal = { version = "1.0.0", default-features = false, features = ["esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp-radio", "esp32s3", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4.27"
esp-radio = { version = "0.17.0", features = ["ble", "esp-alloc", "esp32s3", "log-04", "unstable"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = { version = "0.1.2", default-features = false }
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embassy-usb = { version = "0.5.1", default-features = false }
embassy-usb-driver = { version = "0.2.0", default-features = false }
bt-hci = "0.6.0"
static_cell = "2.1"
trouble-host = { version = "0.5.0", default-features = false, features = ["peripheral", "gatt", "derive", "default-packet-pool"] }
esp-storage = { version = "0.8", default-features = false, features = ["critical-section", "esp32s3"] }
nb = "1.1"
