[package]
name = "host-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serialport = { version = "4", default-features = false, features = ["usbportinfo-interface"] }
shared = { path = "../shared" }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde_cbor = "0.11"

[dev-dependencies]
tempfile = "3"

[package.metadata.cargo-machete]
ignored = ["serde", "shared"]
