[package]
name = "host-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.21"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serialport = { version = "4", default-features = false, features = ["usbportinfo-interface"] }
shared = { path = "../shared" }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde_cbor = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
rand_chacha = "0.3"
tempfile = "3"

[package.metadata.cargo-machete]
ignored = ["serde", "shared"]
