[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["vault-core/std"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
crc32fast = { version = "1", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
postcard-schema = { version = "0.2", default-features = false, features = ["derive", "alloc"] }
ergot = { version = "0.11", default-features = false }
vault-core = { path = "../vault-core", default-features = false }
hmac = { version = "0.12", default-features = false }
sha1 = { package = "sha-1", version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
data-encoding = { version = "2.6", default-features = false, features = ["alloc"] }

[dev-dependencies]

[package.metadata.cargo-machete]
ignored = ["postcard-schema", "ergot"]
