[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
crc32fast = { version = "1", default-features = false }
pruefung = { version = "0.2", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
postcard-schema = { version = "0.2", default-features = false, features = ["derive", "alloc"] }
ergot = { version = "0.11", default-features = false }
aead = { version = "0.5", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
embedded-storage-async = { version = "0.4", default-features = false }
sequential-storage = { version = "5.0.1", default-features = false, features = ["alloc"] }
uuid = { version = "1", default-features = false, features = ["serde"] }
zeroize = { version = "1", default-features = false, features = ["alloc", "derive"] }
data-encoding = { version = "2.6", default-features = false, features = ["alloc"] }
totp_embed = { version = "1.0.5", default-features = false }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }
sequential-storage = { version = "5.0.1", default-features = false, features = ["alloc", "_test"] }

[package.metadata.cargo-machete]
ignored = ["postcard-schema", "ergot"]
