[package]
name = "vault-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
aead = { version = "0.5", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
embedded-storage-async = { version = "0.4", default-features = false }
sequential-storage = { version = "5.0.1", default-features = false, features = ["alloc"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "2"
uuid = { version = "1", default-features = false, features = ["serde"] }
zeroize = { version = "1", default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }
sequential-storage = { version = "5.0.1", default-features = false, features = ["alloc", "_test"] }

[package.metadata.cargo-machete]
ignored = []
